tests/NormalTests/paczka1/small_fuzzy/76491976.err
Error in line 4: 6B4rK4fH2Yr S423 5,9
Error in line 7: jzyLpS A584 331,d
Error in line 6: jzyLpS A584 85,3
Error in line 5: 6B4rK4fH2Yr A966 57,1
